# sphaera-cordeep

./: .gitignore  README.md  detect.py  pyproject.toml  train.py  val.py
SVED/: current_sphaera_data_Julius_11022022.csv
data/hyps/: hyp.scratch.yaml
faster_RCNN/: eval.py  train.py
faster_RCNN/config/: test_config.py  train_config.py
faster_RCNN/dataloader/: sphaera_dataset.py
faster_RCNN/utils/: BoundingBoxes.py  evaluate_utils.py  train_utils.py
models/: experimental.py
utils/: BoundingBox.py  BoundingBoxes.py  Evaluator.py  augmentations.py  datasets.py  general.py  metrics.py  plots.py  torch_utils.py
